--- a/nqueens/pom.xml
+++ b/nqueens/pom.xml
@@ -2,14 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-        <groupId>kth</groupId>
-        <artifactId>ID2209</artifactId>
-        <version>1.0.0</version>
-    </parent>
-    
 	<groupId>kth.id2209</groupId>
-	<artifactId>smartmuseum</artifactId>
+	<artifactId>nqueens</artifactId>
 	<version>1.0.0</version>
 	
 	<repositories>
